<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nominater</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Empty"></string>
    <string name="Empt"></string>
    <string name="username">Friend Username</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="message">message</string>
    <string name="Send">Send</string>
    <string name="user">Username</string>
    <string name="password">password</string>
    <string name="confirm">confirm password</string>
    <string name="email">email</string>
    <string name="signup">Signup</string>

</resources>
