<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText
        android:id="@+id/newFriendUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Empty" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/AddFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Add" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel" />

    </LinearLayout>

</LinearLayout>
