<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message" />

    <TextView
        android:id="@+id/MessageHistory"
        android:layout_width="fill_parent"
        android:layout_height="414dp"
        android:text="@string/Empty" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/sendMessage"
            android:layout_width="240dp"
            android:layout_height="59dp"
            android:text="@string/Empty" />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Send" />

    </LinearLayout>

</LinearLayout>
